fixed the header gap issue for small laptops

--- a/style.css
+++ b/style.css
@@ -79,15 +79,14 @@ nav .fa-solid {
   margin-top: 7rem;
   height: 100vh;
   width: 100vw;
-  margin-bottom: 4.8rem;
 }
 
 .img-box {
   display: flex;
-  width: 90%;
+  width: 60%;
   justify-content: flex-start;
   align-items: flex-start;
-  padding: 6rem;
+  padding-left: 2rem;
 }
 
 .main-header {
@@ -99,6 +98,8 @@ nav .fa-solid {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  padding-bottom: 4rem;
+  padding-left: 2rem;
 
   /* padding: 6.4rem 0; */
 }
